[package]
name = "dukit"
version = "0.4.1"
edition = "2021"
authors =[  "Tharun <tharun1@hotmail.co.uk>" ]
description = "git cli tool for the feathered"
repository = "https://github.com/DrCheeseFace/dukit"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
termion = "4.0.3"
